styles/widgets/common/colorBox.less
.dx-colorbox-input-container {
    &:after {
        content: "";
        display: block;
        position: absolute;
        top: 50%;
        z-index: 1;
        width: 15px;
        height: 15px;
        margin-top: -7.5px;
        left: 14px;
    }

    &.dx-colorbox-color-is-not-defined {
        &:after {
            background: none;
        }

        .dx-colorbox-color-result-preview {
            border: none;
        }
    }
}

.dx-colorbox-color-result-preview {
    position: absolute;
    top: 50%;
    z-index: 2;
    width: 17px;
    height: 17px;
    margin-top: -8.5px;
    left: 13px;
    border: 1px solid;
}

.dx-colorbox-input-container .dx-colorbox-input {
    -webkit-appearance: none;
    padding-left: 40px;
}

.dx-colorbox-overlay {
    padding: 20px;

    .dx-popup-content {
        overflow: hidden;
        padding: 0;
    }

    .dx-popup-bottom {
        .dx-toolbar-item:first-child {
            padding-right: 10px;
        }
    }

    .dx-colorview-buttons-container {
        .dx-button {
            margin: 0;
        }
    }
}

.dx-rtl {
    .dx-colorbox,
    &.dx-colorbox {
        .dx-placeholder {
            right: 32px;
        }

        &.dx-dropdowneditor {
            .dx-colorbox-input.dx-texteditor-input {
                direction: ltr;
                text-align: end;
                padding-right: 40px;
            }

            .dx-colorbox-color-result-preview {
                left: auto;
                right: 13px;
            }

            .dx-colorbox-input-container:after {
                left: auto;
                right: 14px;
            }
        }
    }
}

